<?xml version="1.0"?>
<package format="2">
  <name>test_ament_cmake_gtest_test_results</name>
  <version>0.0.0</version>
  <description>
    A few GTests to ensure Jenkins can process the test result files correctly.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
